# green-db

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  CNAME  DEPLOYMENT.md  Makefile  README.md  index.html  patch_package_versions.sh  pyproject.toml
.github/workflows/: build-and-push-images.yaml  lint.yaml  test.yaml
core/: README.md  pyproject.toml
core/core/: __init__.py  constants.py  domain.py  google_taxonomy.py  log.py  postgres.py  sustainability-labels.json  sustainability_labels.py
core/core/product_classification_thresholds/: bootstrap_database.py  thresholds.json
core/core/sustainability_labels/: __init__.py  bootstrap_database.py  special-labels.json  sustainability-labels-evaluation.csv  sustainability-labels-evaluation.json  sustainability-labels.json
core/tests/: test_core.py
database/: README.md  pyproject.toml
database/database/: __init__.py  config.py  connection.py  domain.py  postgres.py  tables.py
database/database/postgres/: __init__.py  config.py  scraping.py
database/database/sustainability_labels/: __init__.py  manually_added.py  siegelklarheit.json  siegelklarheit.py  special.py
database/tests/: test_database.py
db-exporting/: .flake8  .gitignore  Dockerfile  Makefile  poetry.toml  pyproject.toml
db-exporting/db_exporting/: db_connection.py  main.py
db-exporting/tests/: test_resolve_deposition_url.py
docs/: add-new-shops.md  deployment.md  greendb-transform-schema.ipynb  technical-details.md  transform-v1-schema-to-v2.ipynb
docs/logparse/: parse-extract-logs.md  parse-unknown-labels.py
extract/: Makefile  README.md  pyproject.toml
extract/extract/: __init__.py  parse.py  utils.py
extract/extract/extractors/: __init__.py  amazon.py  amazon_de.py  amazon_fr.py  amazon_gb.py  amazon_uk.py  asos.py  asos_fr.py  eleclerc_fr.py  hm.py  hm_fr.py  otto.py  otto_de.py  zalando.py  zalando_de.py  zalando_fr.py  zalando_gb.py  zalando_uk.py
extract/tests/: test_utils.py  utils.py
extract/tests/amazon/: chromebook_test.py  jackets_test.py  laptop_test.py  printer_test.py  shoes.py  shoes_test.py  underwear_test.py  washer_de_test.py  washer_test.py
extract/tests/amazon/data/: chromebook-indice-fr.html  jacket-detail-list.html  jacket-detail-table.html  jeans_sample.html  laptop.html  pants.html  printer.html  shoes.html  swimwear.html  swimwear_fem.html  underwear.html  washer.html  washer_de.html
extract/tests/asos/: femme-legging_test.py
extract/tests/asos/data/: legging.json
extract/tests/hm/: femme-robe_test.py  male-pant_test.py
extract/tests/hm/data/: femme-robe.html  male-pant-wrong-encoding.html
extract/tests/otto/: damen-pullover_sustainable_filter_test.py  damen-pullover_test.py  damen-shirt_test.py  electronics-fridge-old-energy-label_test.py  electronics-fridge_test.py  electronics-oven-old-energy-label_test.py  electronics-phone-nonsustainable_test.py  electronics-phone-test.py  electronics-phone_test.py  herren-shirt_test.py  otto_test.py
extract/tests/otto/data/: damen-pullover.html  damen-shirt.html  electronics-fridge-old-energy-label.html  electronics-fridge.html  electronics-oven-old-energy-label.html  electronics-phone-nonsustainable.html  electronics-smartphone.html  herren-shirt.html
extract/tests/zalando/: t-shirt_test.py  zalando_test.py
extract/tests/zalando/data/: t-shirt-new.html  t-shirt.html
extract/tests/zalando_fr/: pants_test.py  test-pants.py
extract/tests/zalando_fr/data/: pants.html
infrastructure/: README.md
landing-page/: README.md  pyproject.toml
landing-page/landing_page/: cache.py  index.html  landing-page.html  landing-page.md  landing-page.py  plots.py  utils.py
message-queue/: README.md  pyproject.toml
message-queue/message_queue/: __init__.py
monitoring/: Dockerfile  Makefile  main.py  monitor.py  pyproject.toml  streamlit_app.py  viz_utils.py
monitoring/monitoring/: Monitoring_app.py  Untitled.ipynb  __init__.py  monitoring_app.py  render_helper.py  streamlit_app.py  utils.py  utils_old.py
monitoring/monitoring/pages/: 1_📓️_Extended_Information.py  1_🖼️_Extended_Information.py  2_📈_Leaderboards.py  2_📌_Leaderboards.py  3_🌟_Product_Ranking.py  3_🥇_Product_Ranking.py
product-classification/: Dockerfile  Makefile  pyproject.toml
product-classification/k8s/: deployment.yaml  pvc.yaml  service.yaml  tool-pod.yaml
product-classification/product-classification/: Dockerfile  app.py
product-classification/product_classification/: InferenceEngine.py  __init__.py  app.py  utils.py
product-classification/tests/: product_classification_test.py
scraping/: Dockerfile  Makefile  README.md  pyproject.toml  scrapy.cfg  setup.py
scraping/charts/scrapyd/: Chart.yaml  values.yaml
scraping/charts/scrapyd/templates/: _helpers.tpl  configmap.yaml  service.yaml
scraping/charts/splash/: values.yaml
scraping/scraping/: dupefilter.py  middlewares.py  settings.py  splash.py  utils.py
scraping/scraping/data/: asos_product_types.json  hm_fr_male_female.json  user_agents.json
scraping/scraping/spiders/: _base.py  amazon.py  amazon_de.py  amazon_fr.py  amazon_gb.py  amazon_uk.py  asos.py  asos_fr.py  avocadostore_de.py  eleclerc_fr.py  hm.py  hm_fr.py  otto.py  otto_de.py  zalando.py  zalando_de.py  zalando_fr.py  zalando_gb.py  zalando_uk.py
scraping/scraping/start_scripts/: amazon.py  amazon_de.py  amazon_eu.py  amazon_fr.py  amazon_gb.py  amazon_uk.py  asos.py  asos_fr.py  avocadostore_de.py  eleclerc_fr.py  hm.py  hm_fr.py  otto.py  otto_de.py  zalando.py  zalando_de.py  zalando_fr.py  zalando_gb.py  zalando_uk.py
scraping/scraping/tests/: dupefilter_test.py  startjob_test.py
scraping/tests/: dupefilter_test.py
start-job/: Dockerfile  Makefile
start-job/data/: asos_product_types.json
workers/: Dockerfile  Makefile  README.md  pyproject.toml
workers/charts/green-db-worker/: Chart.yaml  values.yaml
workers/charts/green-db-worker/templates/: _helpers.tpl  deployment.yaml
workers/charts/workers/: Chart.yaml  values.yaml
workers/workers/: __init__.py  config.py  extract.py  extraction.py  inference.py  main.py  scraping.py
(+72 files in other folders)
