[tool.poetry]
name = "db-exporting"
version = "0.1.4"
description = "DB Exporter to Zenodo"
authors = ["ivana <ivana.trajanovska@bht-berlin.de>"]
readme = "README.md"
packages = [{include = "db_exporting"}]

[tool.poetry.scripts]
exporter = "db_exporting.main:start"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
core = {git = "https://github.com/calgo-lab/green-db", branch = "test-database-with-new-poetry", subdirectory = "core"}
database = {git = "https://github.com/calgo-lab/green-db", branch = "test-database-with-new-poetry", subdirectory = "database"}
pandas = "^1.5.2"
pyarrow = "^10.0.1"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
isort = "^5.12.0"
black = "^23.1.0"
types-requests = "^2.28.11.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
