[tool.poetry]
name = "extract"
version = "0.2.15"
description = ""
license = "Apache-2.0"
authors = ["Sebastian Jäger <message@sebastian-jaeger.me>"]
readme = "README.md"
repository = "https://github.com/calgo-lab/green-db"
keywords = ["GreenDB", "database", "scraping", "sustainable", "green"]
classifiers = [
    "Framework :: Scrapy",
    "Topic :: Database"
]

[tool.poetry.dependencies]
python = "^3.10"
core = {git = "https://github.com/calgo-lab/green-db", branch = "test-database-with-new-poetry", subdirectory = "core"}
database = {git = "https://github.com/calgo-lab/green-db", branch = "test-database-with-new-poetry", subdirectory = "database"}
beautifulsoup4 = "^4.10.0"
extruct = "^0.13.0"
chompjs = "^1.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
mypy = "^1.1.1"
isort = "^5.12.0"
black = "^23.1.0"
types-requests = "^2.27.7"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
