[tool.poetry]
name = "landing-page"
version = "0.1.0"
description = ""
authors = ["en-GB <67548055+en-GB@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
markdown-it-py = {extras = ["plugins"], version = "^2.1.0"}
minify-html = "^0.10.3"
plotly = "^5.11.0"
pandas = "^1.5.2"
core = {path = "../core"}
database = {path = "../database"}
altair = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^6.0.0"
mypy = "^0.991"
isort = "^5.11.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
