[tool.poetry]
name = "message-queue"
version = "0.1.0"
description = ""
authors = ["Sebastian Jäger <message@sebastian-jaeger.me>"]

[tool.poetry.dependencies]
python = "^3.9"
core = {path = "../core", develop = true}
redis = "^4.1.1"
rq = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.9
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.flake]
max-line-length = 100

[tool.black]
line-length = 100