[tool.poetry]
name = "message-queue"
version = "0.2.11"
description = ""
license = "Apache-2.0"
authors = ["Sebastian Jäger <message@sebastian-jaeger.me>"]
readme = "README.md"
repository = "https://github.com/calgo-lab/green-db"
keywords = ["GreenDB", "database", "scraping", "sustainable", "green"]
classifiers = [
    "Framework :: Scrapy",
    "Topic :: Database"
]

[tool.poetry.dependencies]
python = "^3.9"
core = {path = "../core", develop = true}
redis = "^4.1.1"
rq = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100