[tool.poetry]
name = "monitoring"
version = "0.1.13"
description = ""
authors = ["AdriaSG <adrianasg.15@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.11.0"
pandas = "^1.4.3"
plotly = "^5.9.0"
core = {path = "../core", develop = true}
database = {path = "../database", develop = true}
psycopg2 = "^2.9.3"
pip = "*"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.10.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
