[tool.poetry]
name = "monitoring"
version = "0.2.5"
description = ""
authors = ["AdriaSG <adrianasg.15@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.11.0"
pandas = "^1.4.3"
plotly = "^5.9.0"
numpy = "^1.23.1"
core = {path = "../core", develop = true}
database = {path = "../database", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
