[tool.poetry]
name = "product-classification"
version = "0.1.0"
description = ""
authors = ["Alex Flick <alex.flick@gmx.de>"]
readme = "README.md"
packages = [{include = "product-classification"}]

[tool.poetry.dependencies]
python = "~3.8"
Flask = "^2.2.3"
waitress = "^2.1.2"
numpy = "<1.23.0"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
