[tool.poetry]
name = "product-classification"
version = "0.1.0"
description = ""
authors = ["Alex Flick <alex.flick@gmx.de>"]
readme = "README.md"
packages = [{include = "product-classification"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.0"
Flask = "^2.2.3"
waitress = "^2.1.2"
numpy = "<1.23.0"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
