[tool.poetry]
name = "scraping"
version = "0.2.9"
description = ""
license = "Apache-2.0"
authors = ["Sebastian Jäger <message@sebastian-jaeger.me>"]
readme = "README.md"
repository = "https://github.com/calgo-lab/green-db"
keywords = ["GreenDB", "database", "scraping", "sustainable", "green"]
classifiers = [
    "Framework :: Scrapy",
    "Topic :: Database"
]

[tool.poetry.dependencies]
python = "^3.9"
core = {git = "https://github.com/calgo-lab/green-db", subdirectory = "core"}
message_queue = {git = "https://github.com/calgo-lab/green-db", subdirectory = "message-queue"}
Scrapy = "^2"
scrapy-splash = "^0.9.0"
scrapy-playwright = "^0.0.17"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
mypy = "*"
isort = "*"
black = "*"
scrapyd-client = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100