[tool.poetry]
name = "workers"
version = "0.2.9"
description = ""
license = "Apache-2.0"
authors = ["Sebastian Jäger <message@sebastian-jaeger.me>"]
readme = "README.md"
repository = "https://github.com/calgo-lab/green-db"
keywords = ["GreenDB", "database", "scraping", "sustainable", "green"]
classifiers = [
    "Framework :: Scrapy",
    "Topic :: Database"
]

[tool.poetry.scripts]
worker = "workers.main:start"

[tool.poetry.dependencies]
python = "^3.10"
core = {git = "https://github.com/calgo-lab/green-db", subdirectory = "core"}
database = {git = "https://github.com/calgo-lab/green-db", subdirectory = "database"}
extract = {git = "https://github.com/calgo-lab/green-db", subdirectory = "extract"}
message_queue = {git = "https://github.com/calgo-lab/green-db", subdirectory = "message-queue"}

redis = "^4.1.1"
rq = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
mypy = "*"
isort = "*"
black = "*"
types-redis = "^4.1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
