[tool.poetry]
name = "workers"
version = "0.2.10"
description = ""
license = "Apache-2.0"
authors = ["Sebastian Jäger <message@sebastian-jaeger.me>"]
readme = "README.md"
repository = "https://github.com/calgo-lab/green-db"
keywords = ["GreenDB", "database", "scraping", "sustainable", "green"]
classifiers = [
    "Framework :: Scrapy",
    "Topic :: Database"
]

[tool.poetry.scripts]
worker = "workers.main:start"

[tool.poetry.dependencies]
python = "^3.10"
core = {path = "../core", develop = true}
database = {path = "../database", develop = true}
extract = {path = "../extract", develop = true}
message_queue = {path = "../message-queue", develop = true}

redis = "^4.1.1"
rq = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
mypy = "^1.1.1"
isort = "^5.12.0"
black = "^23.1.0"
types-redis = "^4.1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
